--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "multer": "^1.4.2",
         "mysql2": "^2.1.0",
         "path": "^0.12.7",
-        "paywell-wallet": "^0.1.3",
         "rootpath": "^0.1.2",
         "sequelize": "^6.3.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
-    }
+    },
+	"engines": {
+		"node": "14.x"
+	 }
 }
